// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskInbox tests Test empty state 1`] = `
<TaskInbox>
  <KogitoEmptyState
    body="Try using different filters"
    title="No results found"
    type={0}
  >
    <MockedComponent />
  </KogitoEmptyState>
</TaskInbox>
`;

exports[`TaskInbox tests Test load data with LoadMore 1`] = `
<TaskInbox>
  <DataTable
    LoadingComponent={
      <Bullseye>
        <KogitoSpinner
          spinnerText="Loading user tasks..."
        />
      </Bullseye>
    }
    columns={
      Array [
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Name",
          "path": "referenceName",
        },
        Object {
          "isSortable": false,
          "label": "Process",
          "path": "processId",
        },
        Object {
          "isSortable": true,
          "label": "Priority",
          "path": "priority",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "State",
          "path": "state",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Started",
          "path": "started",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Last update",
          "path": "lastUpdate",
        },
      ]
    }
    data={
      Array [
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:4000/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
          "excludedUsers": Array [],
          "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
          "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
          "lastUpdate": "2020-02-19T11:11:56.282Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T11:11:56.282Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": "",
          "endpoint": "http://localhost:4000/travels/9ae407dd-cdfa-4722-8a49-0a6d2e14550d/VisaApplication/047ec38d-5d57-4330-8c8d-9bd67b53a529",
          "excludedUsers": Array [],
          "id": "047ec38d-5d57-4330-8c8d-9bd67b53a529",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T13:22:40.909Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "9ae407dd-cdfa-4722-8a49-0a6d2e14550d",
          "referenceName": "Confirm travel (Submit fails)",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T10:59:34.185Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-02-19T10:49:24.623Z",
          "description": "",
          "endpoint": "http://localhost:4000/travels/4bfdd404-c46a-4751-b401-b1428a30fa07/ConfirmTravel/f6be5b6b-34de-4b06-b6e7-05bcf8ba7f54",
          "excludedUsers": Array [],
          "id": "f6be5b6b-34de-4b06-b6e7-05bcf8ba7f54",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T10:49:24.623Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "4bfdd404-c46a-4751-b401-b1428a30fa07",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T10:49:16.559Z",
          "state": "Completed",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-02-19T09:55:52.574Z",
          "description": "",
          "endpoint": "http://localhost:4000/travels/7e31993d-8c9a-45e8-997d-7156632a520f/ConfirmTravel/5cead49f-7649-410a-89ff-840cc52adf52",
          "excludedUsers": Array [],
          "id": "5cead49f-7649-410a-89ff-840cc52adf52",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T09:55:52.574Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "7e31993d-8c9a-45e8-997d-7156632a520f",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T09:55:38.81Z",
          "state": "Aborted",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/a84df9ba-f41e-47cb-9aa5-67cffff2c5bc/VisaApplication/841b9dba-3d91-4725-9de3-f9f4853b417e",
          "excludedUsers": Array [],
          "id": "841b9dba-3d91-4725-9de3-f9f4853b417e",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:00:02.39Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "a84df9ba-f41e-47cb-9aa5-67cffff2c5bc",
          "referenceName": "Apply for visa (Submit fail)",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:02.386Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/5c10ec86-4cf5-4de2-a5ab-d962893f079d/VisaApplication/475e3eb3-1de4-4f68-a146-79c236353a03",
          "excludedUsers": Array [],
          "id": "475e3eb3-1de4-4f68-a146-79c236353a03",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:00:04.884Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "5c10ec86-4cf5-4de2-a5ab-d962893f079d",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:04.88Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/9d19c8ec-aa5c-4681-9bb5-ff8cbce08091/VisaApplication/c6fedd33-8fea-4adf-97a0-9d2b6676e9d0",
          "excludedUsers": Array [],
          "id": "c6fedd33-8fea-4adf-97a0-9d2b6676e9d0",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:00:07.079Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "9d19c8ec-aa5c-4681-9bb5-ff8cbce08091",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:07.075Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/5204b2d2-54ec-4f07-8f8c-3079a1f5fe9b/ConfirmTravel/809aae9e-f0bf-4892-b0c9-4be80664d2aa",
          "excludedUsers": Array [],
          "id": "809aae9e-f0bf-4892-b0c9-4be80664d2aa",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:00:15.389Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "5204b2d2-54ec-4f07-8f8c-3079a1f5fe9b",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:15.381Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/d6685e24-0aad-4e5c-a64f-29e95cae9e5e/ConfirmTravel/615b9143-1468-4028-b454-6122e2139f5c",
          "excludedUsers": Array [],
          "id": "615b9143-1468-4028-b454-6122e2139f5c",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:00:18.05Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "d6685e24-0aad-4e5c-a64f-29e95cae9e5e",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:18.044Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/40ab14f0-3a10-4ffd-96e1-05b0028943b4/ConfirmTravel/2e37c623-a535-4eb1-ae5b-6eaf7f4039c3",
          "excludedUsers": Array [],
          "id": "2e37c623-a535-4eb1-ae5b-6eaf7f4039c3",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:00:20.835Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "40ab14f0-3a10-4ffd-96e1-05b0028943b4",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:20.832Z",
          "state": "Ready",
        },
      ]
    }
    isLoading={false}
    networkStatus={7}
    onSorting={[Function]}
    refetch={[Function]}
  >
    <MockedComponent />
  </DataTable>
  <LoadMore
    getMoreItems={[Function]}
    isLoadingMore={false}
    offset={0}
    pageSize={10}
    setOffset={[Function]}
  >
    <DataList
      aria-label="Simple data list example"
      data-ouia-component-type="load-more"
      data-ouia-safe={true}
    >
      <ul
        aria-label="Simple data list example"
        className="pf-c-data-list"
        data-ouia-component-type="load-more"
        data-ouia-safe={true}
      >
        <DataListItem
          aria-labelledby="kie-datalist-item"
        >
          <li
            aria-labelledby="kie-datalist-item"
            className="pf-c-data-list__item"
            id=""
          >
            <DataListCell
              className="kogito-common__load-more"
              key=".0"
              rowid="kie-datalist-item"
            >
              <div
                className="pf-c-data-list__cell kogito-common__load-more"
                rowid="kie-datalist-item"
              >
                <div
                  className="pf-u-float-right pf-u-mr-md"
                >
                  <Dropdown
                    direction="up"
                    dropdownItems={
                      Array [
                        <DropdownItem
                          component="button"
                          id="10"
                        >
                          <Split
                            hasGutter={true}
                          >
                            <SplitItem>
                              Load 
                              10
                               more
                            </SplitItem>
                            <SplitItem>
                              <CheckIcon
                                color="var(--pf-global--info-color--100)"
                                noVerticalAlign={false}
                                size="sm"
                              />
                            </SplitItem>
                          </Split>
                        </DropdownItem>,
                        <DropdownItem
                          component="button"
                          id="20"
                        >
                          <Split
                            hasGutter={true}
                          >
                            <SplitItem>
                              Load 
                              20
                               more
                            </SplitItem>
                          </Split>
                        </DropdownItem>,
                        <DropdownItem
                          component="button"
                          id="50"
                        >
                          <Split
                            hasGutter={true}
                          >
                            <SplitItem>
                              Load 
                              50
                               more
                            </SplitItem>
                          </Split>
                        </DropdownItem>,
                        <DropdownItem
                          component="button"
                          id="100"
                        >
                          <Split
                            hasGutter={true}
                          >
                            <SplitItem>
                              Load 
                              100
                               more
                            </SplitItem>
                          </Split>
                        </DropdownItem>,
                      ]
                    }
                    isOpen={false}
                    onSelect={[Function]}
                    toggle={
                      <DropdownToggle
                        id="toggle-id"
                        onToggle={[Function]}
                        splitButtonItems={
                          Array [
                            <DropdownToggleAction
                              className=""
                              isDisabled={false}
                              onClick={[Function]}
                            >
                              Load 10 more
                            </DropdownToggleAction>,
                          ]
                        }
                      />
                    }
                  >
                    <DropdownWithContext
                      autoFocus={true}
                      className=""
                      direction="up"
                      dropdownItems={
                        Array [
                          <DropdownItem
                            component="button"
                            id="10"
                          >
                            <Split
                              hasGutter={true}
                            >
                              <SplitItem>
                                Load 
                                10
                                 more
                              </SplitItem>
                              <SplitItem>
                                <CheckIcon
                                  color="var(--pf-global--info-color--100)"
                                  noVerticalAlign={false}
                                  size="sm"
                                />
                              </SplitItem>
                            </Split>
                          </DropdownItem>,
                          <DropdownItem
                            component="button"
                            id="20"
                          >
                            <Split
                              hasGutter={true}
                            >
                              <SplitItem>
                                Load 
                                20
                                 more
                              </SplitItem>
                            </Split>
                          </DropdownItem>,
                          <DropdownItem
                            component="button"
                            id="50"
                          >
                            <Split
                              hasGutter={true}
                            >
                              <SplitItem>
                                Load 
                                50
                                 more
                              </SplitItem>
                            </Split>
                          </DropdownItem>,
                          <DropdownItem
                            component="button"
                            id="100"
                          >
                            <Split
                              hasGutter={true}
                            >
                              <SplitItem>
                                Load 
                                100
                                 more
                              </SplitItem>
                            </Split>
                          </DropdownItem>,
                        ]
                      }
                      isGrouped={false}
                      isOpen={false}
                      isPlain={false}
                      menuAppendTo="inline"
                      onSelect={[Function]}
                      position="left"
                      toggle={
                        <DropdownToggle
                          id="toggle-id"
                          onToggle={[Function]}
                          splitButtonItems={
                            Array [
                              <DropdownToggleAction
                                className=""
                                isDisabled={false}
                                onClick={[Function]}
                              >
                                Load 10 more
                              </DropdownToggleAction>,
                            ]
                          }
                        />
                      }
                    >
                      <div
                        className="pf-c-dropdown pf-m-top"
                        data-ouia-component-id={0}
                        data-ouia-component-type="PF4/Dropdown"
                        data-ouia-safe={true}
                      >
                        <DropdownToggle
                          aria-haspopup={true}
                          getMenuRef={[Function]}
                          id="toggle-id"
                          isOpen={false}
                          isPlain={false}
                          key=".0"
                          onEnter={[Function]}
                          onToggle={[Function]}
                          parentRef={
                            Object {
                              "current": <div
                                class="pf-c-dropdown pf-m-top"
                                data-ouia-component-id="0"
                                data-ouia-component-type="PF4/Dropdown"
                                data-ouia-safe="true"
                              >
                                <div
                                  class="pf-c-dropdown__toggle pf-m-split-button"
                                >
                                  <button
                                    class="pf-c-dropdown__toggle-button"
                                  >
                                    Load 10 more
                                  </button>
                                  <button
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    aria-label="Select"
                                    class="pf-c-dropdown__toggle-button"
                                    id="toggle-id"
                                    type="button"
                                  >
                                    <span
                                      class=""
                                    >
                                      <svg
                                        aria-hidden="true"
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: -0.125em;"
                                        viewBox="0 0 320 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                          transform=""
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </div>
                              </div>,
                            }
                          }
                          splitButtonItems={
                            Array [
                              <DropdownToggleAction
                                className=""
                                isDisabled={false}
                                onClick={[Function]}
                              >
                                Load 10 more
                              </DropdownToggleAction>,
                            ]
                          }
                        >
                          <div
                            className="pf-c-dropdown__toggle pf-m-split-button"
                          >
                            <DropdownToggleAction
                              className=""
                              isDisabled={false}
                              key="toggle-id-undefined"
                              onClick={[Function]}
                            >
                              <button
                                className="pf-c-dropdown__toggle-button"
                                onClick={[Function]}
                              >
                                Load 10 more
                              </button>
                            </DropdownToggleAction>
                            <Toggle
                              aria-haspopup={true}
                              aria-label="Select"
                              bubbleEvent={false}
                              className=""
                              getMenuRef={[Function]}
                              id="toggle-id"
                              isActive={false}
                              isDisabled={false}
                              isOpen={false}
                              isPlain={false}
                              isPrimary={false}
                              isSplitButton={true}
                              onEnter={[Function]}
                              onToggle={[Function]}
                              parentRef={
                                Object {
                                  "current": <div
                                    class="pf-c-dropdown pf-m-top"
                                    data-ouia-component-id="0"
                                    data-ouia-component-type="PF4/Dropdown"
                                    data-ouia-safe="true"
                                  >
                                    <div
                                      class="pf-c-dropdown__toggle pf-m-split-button"
                                    >
                                      <button
                                        class="pf-c-dropdown__toggle-button"
                                      >
                                        Load 10 more
                                      </button>
                                      <button
                                        aria-expanded="false"
                                        aria-haspopup="true"
                                        aria-label="Select"
                                        class="pf-c-dropdown__toggle-button"
                                        id="toggle-id"
                                        type="button"
                                      >
                                        <span
                                          class=""
                                        >
                                          <svg
                                            aria-hidden="true"
                                            fill="currentColor"
                                            height="1em"
                                            role="img"
                                            style="vertical-align: -0.125em;"
                                            viewBox="0 0 320 512"
                                            width="1em"
                                          >
                                            <path
                                              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                              transform=""
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </div>
                                  </div>,
                                }
                              }
                            >
                              <button
                                aria-expanded={false}
                                aria-haspopup={true}
                                aria-label="Select"
                                className="pf-c-dropdown__toggle-button"
                                disabled={false}
                                id="toggle-id"
                                onClick={[Function]}
                                onKeyDown={[Function]}
                                type="button"
                              >
                                <span
                                  className=""
                                >
                                  <CaretDownIcon
                                    color="currentColor"
                                    noVerticalAlign={false}
                                    size="sm"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      aria-labelledby={null}
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style={
                                        Object {
                                          "verticalAlign": "-0.125em",
                                        }
                                      }
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                        transform=""
                                      />
                                    </svg>
                                  </CaretDownIcon>
                                </span>
                              </button>
                            </Toggle>
                          </div>
                        </DropdownToggle>
                      </div>
                    </DropdownWithContext>
                  </Dropdown>
                </div>
              </div>
            </DataListCell>
          </li>
        </DataListItem>
      </ul>
    </DataList>
  </LoadMore>
</TaskInbox>
`;

exports[`TaskInbox tests Test load data with LoadMore 2`] = `
<TaskInbox>
  <DataTable
    LoadingComponent={
      <Bullseye>
        <KogitoSpinner
          spinnerText="Loading user tasks..."
        />
      </Bullseye>
    }
    columns={
      Array [
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Name",
          "path": "referenceName",
        },
        Object {
          "isSortable": false,
          "label": "Process",
          "path": "processId",
        },
        Object {
          "isSortable": true,
          "label": "Priority",
          "path": "priority",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "State",
          "path": "state",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Started",
          "path": "started",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Last update",
          "path": "lastUpdate",
        },
      ]
    }
    data={
      Array [
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:4000/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
          "excludedUsers": Array [],
          "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
          "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
          "lastUpdate": "2020-02-19T11:11:56.282Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T11:11:56.282Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": "",
          "endpoint": "http://localhost:4000/travels/9ae407dd-cdfa-4722-8a49-0a6d2e14550d/VisaApplication/047ec38d-5d57-4330-8c8d-9bd67b53a529",
          "excludedUsers": Array [],
          "id": "047ec38d-5d57-4330-8c8d-9bd67b53a529",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T13:22:40.909Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "9ae407dd-cdfa-4722-8a49-0a6d2e14550d",
          "referenceName": "Confirm travel (Submit fails)",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T10:59:34.185Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-02-19T10:49:24.623Z",
          "description": "",
          "endpoint": "http://localhost:4000/travels/4bfdd404-c46a-4751-b401-b1428a30fa07/ConfirmTravel/f6be5b6b-34de-4b06-b6e7-05bcf8ba7f54",
          "excludedUsers": Array [],
          "id": "f6be5b6b-34de-4b06-b6e7-05bcf8ba7f54",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T10:49:24.623Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "4bfdd404-c46a-4751-b401-b1428a30fa07",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T10:49:16.559Z",
          "state": "Completed",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-02-19T09:55:52.574Z",
          "description": "",
          "endpoint": "http://localhost:4000/travels/7e31993d-8c9a-45e8-997d-7156632a520f/ConfirmTravel/5cead49f-7649-410a-89ff-840cc52adf52",
          "excludedUsers": Array [],
          "id": "5cead49f-7649-410a-89ff-840cc52adf52",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T09:55:52.574Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "7e31993d-8c9a-45e8-997d-7156632a520f",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T09:55:38.81Z",
          "state": "Aborted",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/a84df9ba-f41e-47cb-9aa5-67cffff2c5bc/VisaApplication/841b9dba-3d91-4725-9de3-f9f4853b417e",
          "excludedUsers": Array [],
          "id": "841b9dba-3d91-4725-9de3-f9f4853b417e",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:00:02.39Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "a84df9ba-f41e-47cb-9aa5-67cffff2c5bc",
          "referenceName": "Apply for visa (Submit fail)",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:02.386Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/5c10ec86-4cf5-4de2-a5ab-d962893f079d/VisaApplication/475e3eb3-1de4-4f68-a146-79c236353a03",
          "excludedUsers": Array [],
          "id": "475e3eb3-1de4-4f68-a146-79c236353a03",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:00:04.884Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "5c10ec86-4cf5-4de2-a5ab-d962893f079d",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:04.88Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/9d19c8ec-aa5c-4681-9bb5-ff8cbce08091/VisaApplication/c6fedd33-8fea-4adf-97a0-9d2b6676e9d0",
          "excludedUsers": Array [],
          "id": "c6fedd33-8fea-4adf-97a0-9d2b6676e9d0",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:00:07.079Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "9d19c8ec-aa5c-4681-9bb5-ff8cbce08091",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:07.075Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/5204b2d2-54ec-4f07-8f8c-3079a1f5fe9b/ConfirmTravel/809aae9e-f0bf-4892-b0c9-4be80664d2aa",
          "excludedUsers": Array [],
          "id": "809aae9e-f0bf-4892-b0c9-4be80664d2aa",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:00:15.389Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "5204b2d2-54ec-4f07-8f8c-3079a1f5fe9b",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:15.381Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/d6685e24-0aad-4e5c-a64f-29e95cae9e5e/ConfirmTravel/615b9143-1468-4028-b454-6122e2139f5c",
          "excludedUsers": Array [],
          "id": "615b9143-1468-4028-b454-6122e2139f5c",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:00:18.05Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "d6685e24-0aad-4e5c-a64f-29e95cae9e5e",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:18.044Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/40ab14f0-3a10-4ffd-96e1-05b0028943b4/ConfirmTravel/2e37c623-a535-4eb1-ae5b-6eaf7f4039c3",
          "excludedUsers": Array [],
          "id": "2e37c623-a535-4eb1-ae5b-6eaf7f4039c3",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:00:20.835Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "40ab14f0-3a10-4ffd-96e1-05b0028943b4",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:20.832Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/e1d4b174-a9b5-465b-b142-018df18d87d8/ConfirmTravel/3c1d6da4-436a-4728-bc24-9a69781bcbac",
          "excludedUsers": Array [],
          "id": "3c1d6da4-436a-4728-bc24-9a69781bcbac",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:00:23.701Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "e1d4b174-a9b5-465b-b142-018df18d87d8",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:23.698Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/b8eebfe7-45f4-4ce7-9019-1740222b302a/ConfirmTravel/86ddb2c7-c8e1-435f-a274-a8b0eb066ac1",
          "excludedUsers": Array [],
          "id": "86ddb2c7-c8e1-435f-a274-a8b0eb066ac1",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:01:12.655Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "b8eebfe7-45f4-4ce7-9019-1740222b302a",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:01:12.65Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/0c469bbf-988b-44e0-8fc9-90286500c519/ConfirmTravel/9e1e0601-f7bd-4ad3-88ca-57afc9e3cf9d",
          "excludedUsers": Array [],
          "id": "9e1e0601-f7bd-4ad3-88ca-57afc9e3cf9d",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:01:14.416Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "0c469bbf-988b-44e0-8fc9-90286500c519",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:01:14.412Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/718f44c2-e574-482c-9a24-60d17e474dde/ConfirmTravel/a3eefa9a-51b0-4820-bc99-94c370389ed5",
          "excludedUsers": Array [],
          "id": "a3eefa9a-51b0-4820-bc99-94c370389ed5",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:01:16.426Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "718f44c2-e574-482c-9a24-60d17e474dde",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:01:16.421Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-07-30T09:22:16.417Z",
          "description": "",
          "endpoint": "http://localhost:8080/travels/fe523245-05e2-4a0c-abf7-a774cfe9d3f9/VisaApplication/aa9f477c-5172-4913-956a-6c76f7278207",
          "excludedUsers": Array [],
          "id": "aa9f477c-5172-4913-956a-6c76f7278207",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:22:16.446Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "fe523245-05e2-4a0c-abf7-a774cfe9d3f9",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T08:59:55.64Z",
          "state": "Completed",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": "",
          "endpoint": "http://localhost:8080/travels/28f63147-b948-4a63-acce-ec2c5c5f15ca/ConfirmTravel/99bb167f-144a-42fb-8f40-b80f34f5bed9",
          "excludedUsers": Array [],
          "id": "99bb167f-144a-42fb-8f40-b80f34f5bed9",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:32:14.556Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "28f63147-b948-4a63-acce-ec2c5c5f15ca",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T08:59:44.749Z",
          "state": "Aborted",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-07-30T09:40:26.896Z",
          "description": "",
          "endpoint": "http://localhost:8080/travels/53923218-2a54-40c5-8b01-872d8dd2ec67/ConfirmTravel/2f8e0452-b50d-40f8-a657-b32c812828ef",
          "excludedUsers": Array [],
          "id": "2f8e0452-b50d-40f8-a657-b32c812828ef",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:40:26.901Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "53923218-2a54-40c5-8b01-872d8dd2ec67",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T08:59:47.779Z",
          "state": "Completed",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-07-30T09:43:29.625Z",
          "description": "",
          "endpoint": "http://localhost:8080/travels/8e0eb71c-b5a3-44a3-9b82-d786781a6598/VisaApplication/5ac50f25-192c-4719-9847-f9b8bdfe3381",
          "excludedUsers": Array [],
          "id": "5ac50f25-192c-4719-9847-f9b8bdfe3381",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:43:29.628Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "8e0eb71c-b5a3-44a3-9b82-d786781a6598",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T08:59:58.565Z",
          "state": "Completed",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": "",
          "endpoint": "http://localhost:8080/travels/a413fc40-b192-4879-94aa-dc84d0394f67/ConfirmTravel/e878bca4-84f6-46a3-a864-9632ab490cab",
          "excludedUsers": Array [],
          "id": "e878bca4-84f6-46a3-a864-9632ab490cab",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T09:44:00.082Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "a413fc40-b192-4879-94aa-dc84d0394f67",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:13.404Z",
          "state": "Aborted",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/90a4d7db-c41f-4e01-b6b1-201be823bc07/ConfirmTravel/61676d8f-56b7-4bc3-bd40-4c905d4ab176",
          "excludedUsers": Array [],
          "id": "61676d8f-56b7-4bc3-bd40-4c905d4ab176",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"GroupId\\":\\"group2\\"}",
          "lastUpdate": "2020-07-30T12:57:33.318Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [
            "group2",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "90a4d7db-c41f-4e01-b6b1-201be823bc07",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T12:57:33.309Z",
          "state": "Ready",
        },
      ]
    }
    isLoading={false}
    networkStatus={7}
    onSorting={[Function]}
    refetch={[Function]}
  >
    <MockedComponent />
  </DataTable>
  <LoadMore
    getMoreItems={[Function]}
    isLoadingMore={false}
    offset={10}
    pageSize={10}
    setOffset={[Function]}
  >
    <DataList
      aria-label="Simple data list example"
      data-ouia-component-type="load-more"
      data-ouia-safe={true}
    >
      <ul
        aria-label="Simple data list example"
        className="pf-c-data-list"
        data-ouia-component-type="load-more"
        data-ouia-safe={true}
      >
        <DataListItem
          aria-labelledby="kie-datalist-item"
        >
          <li
            aria-labelledby="kie-datalist-item"
            className="pf-c-data-list__item"
            id=""
          >
            <DataListCell
              className="kogito-common__load-more"
              key=".0"
              rowid="kie-datalist-item"
            >
              <div
                className="pf-c-data-list__cell kogito-common__load-more"
                rowid="kie-datalist-item"
              >
                <div
                  className="pf-u-float-right pf-u-mr-md"
                >
                  <Dropdown
                    direction="up"
                    dropdownItems={
                      Array [
                        <DropdownItem
                          component="button"
                          id="10"
                        >
                          <Split
                            hasGutter={true}
                          >
                            <SplitItem>
                              Load 
                              10
                               more
                            </SplitItem>
                            <SplitItem>
                              <CheckIcon
                                color="var(--pf-global--info-color--100)"
                                noVerticalAlign={false}
                                size="sm"
                              />
                            </SplitItem>
                          </Split>
                        </DropdownItem>,
                        <DropdownItem
                          component="button"
                          id="20"
                        >
                          <Split
                            hasGutter={true}
                          >
                            <SplitItem>
                              Load 
                              20
                               more
                            </SplitItem>
                          </Split>
                        </DropdownItem>,
                        <DropdownItem
                          component="button"
                          id="50"
                        >
                          <Split
                            hasGutter={true}
                          >
                            <SplitItem>
                              Load 
                              50
                               more
                            </SplitItem>
                          </Split>
                        </DropdownItem>,
                        <DropdownItem
                          component="button"
                          id="100"
                        >
                          <Split
                            hasGutter={true}
                          >
                            <SplitItem>
                              Load 
                              100
                               more
                            </SplitItem>
                          </Split>
                        </DropdownItem>,
                      ]
                    }
                    isOpen={false}
                    onSelect={[Function]}
                    toggle={
                      <DropdownToggle
                        id="toggle-id"
                        onToggle={[Function]}
                        splitButtonItems={
                          Array [
                            <DropdownToggleAction
                              className=""
                              isDisabled={false}
                              onClick={[Function]}
                            >
                              Load 10 more
                            </DropdownToggleAction>,
                          ]
                        }
                      />
                    }
                  >
                    <DropdownWithContext
                      autoFocus={true}
                      className=""
                      direction="up"
                      dropdownItems={
                        Array [
                          <DropdownItem
                            component="button"
                            id="10"
                          >
                            <Split
                              hasGutter={true}
                            >
                              <SplitItem>
                                Load 
                                10
                                 more
                              </SplitItem>
                              <SplitItem>
                                <CheckIcon
                                  color="var(--pf-global--info-color--100)"
                                  noVerticalAlign={false}
                                  size="sm"
                                />
                              </SplitItem>
                            </Split>
                          </DropdownItem>,
                          <DropdownItem
                            component="button"
                            id="20"
                          >
                            <Split
                              hasGutter={true}
                            >
                              <SplitItem>
                                Load 
                                20
                                 more
                              </SplitItem>
                            </Split>
                          </DropdownItem>,
                          <DropdownItem
                            component="button"
                            id="50"
                          >
                            <Split
                              hasGutter={true}
                            >
                              <SplitItem>
                                Load 
                                50
                                 more
                              </SplitItem>
                            </Split>
                          </DropdownItem>,
                          <DropdownItem
                            component="button"
                            id="100"
                          >
                            <Split
                              hasGutter={true}
                            >
                              <SplitItem>
                                Load 
                                100
                                 more
                              </SplitItem>
                            </Split>
                          </DropdownItem>,
                        ]
                      }
                      isGrouped={false}
                      isOpen={false}
                      isPlain={false}
                      menuAppendTo="inline"
                      onSelect={[Function]}
                      position="left"
                      toggle={
                        <DropdownToggle
                          id="toggle-id"
                          onToggle={[Function]}
                          splitButtonItems={
                            Array [
                              <DropdownToggleAction
                                className=""
                                isDisabled={false}
                                onClick={[Function]}
                              >
                                Load 10 more
                              </DropdownToggleAction>,
                            ]
                          }
                        />
                      }
                    >
                      <div
                        className="pf-c-dropdown pf-m-top"
                        data-ouia-component-id={4}
                        data-ouia-component-type="PF4/Dropdown"
                        data-ouia-safe={true}
                      >
                        <DropdownToggle
                          aria-haspopup={true}
                          getMenuRef={[Function]}
                          id="toggle-id"
                          isOpen={false}
                          isPlain={false}
                          key=".0"
                          onEnter={[Function]}
                          onToggle={[Function]}
                          parentRef={
                            Object {
                              "current": <div
                                class="pf-c-dropdown pf-m-top"
                                data-ouia-component-id="4"
                                data-ouia-component-type="PF4/Dropdown"
                                data-ouia-safe="true"
                              >
                                <div
                                  class="pf-c-dropdown__toggle pf-m-split-button"
                                >
                                  <button
                                    class="pf-c-dropdown__toggle-button"
                                  >
                                    Load 10 more
                                  </button>
                                  <button
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    aria-label="Select"
                                    class="pf-c-dropdown__toggle-button"
                                    id="toggle-id"
                                    type="button"
                                  >
                                    <span
                                      class=""
                                    >
                                      <svg
                                        aria-hidden="true"
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: -0.125em;"
                                        viewBox="0 0 320 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                          transform=""
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </div>
                              </div>,
                            }
                          }
                          splitButtonItems={
                            Array [
                              <DropdownToggleAction
                                className=""
                                isDisabled={false}
                                onClick={[Function]}
                              >
                                Load 10 more
                              </DropdownToggleAction>,
                            ]
                          }
                        >
                          <div
                            className="pf-c-dropdown__toggle pf-m-split-button"
                          >
                            <DropdownToggleAction
                              className=""
                              isDisabled={false}
                              key="toggle-id-undefined"
                              onClick={[Function]}
                            >
                              <button
                                className="pf-c-dropdown__toggle-button"
                                onClick={[Function]}
                              >
                                Load 10 more
                              </button>
                            </DropdownToggleAction>
                            <Toggle
                              aria-haspopup={true}
                              aria-label="Select"
                              bubbleEvent={false}
                              className=""
                              getMenuRef={[Function]}
                              id="toggle-id"
                              isActive={false}
                              isDisabled={false}
                              isOpen={false}
                              isPlain={false}
                              isPrimary={false}
                              isSplitButton={true}
                              onEnter={[Function]}
                              onToggle={[Function]}
                              parentRef={
                                Object {
                                  "current": <div
                                    class="pf-c-dropdown pf-m-top"
                                    data-ouia-component-id="4"
                                    data-ouia-component-type="PF4/Dropdown"
                                    data-ouia-safe="true"
                                  >
                                    <div
                                      class="pf-c-dropdown__toggle pf-m-split-button"
                                    >
                                      <button
                                        class="pf-c-dropdown__toggle-button"
                                      >
                                        Load 10 more
                                      </button>
                                      <button
                                        aria-expanded="false"
                                        aria-haspopup="true"
                                        aria-label="Select"
                                        class="pf-c-dropdown__toggle-button"
                                        id="toggle-id"
                                        type="button"
                                      >
                                        <span
                                          class=""
                                        >
                                          <svg
                                            aria-hidden="true"
                                            fill="currentColor"
                                            height="1em"
                                            role="img"
                                            style="vertical-align: -0.125em;"
                                            viewBox="0 0 320 512"
                                            width="1em"
                                          >
                                            <path
                                              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                              transform=""
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </div>
                                  </div>,
                                }
                              }
                            >
                              <button
                                aria-expanded={false}
                                aria-haspopup={true}
                                aria-label="Select"
                                className="pf-c-dropdown__toggle-button"
                                disabled={false}
                                id="toggle-id"
                                onClick={[Function]}
                                onKeyDown={[Function]}
                                type="button"
                              >
                                <span
                                  className=""
                                >
                                  <CaretDownIcon
                                    color="currentColor"
                                    noVerticalAlign={false}
                                    size="sm"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      aria-labelledby={null}
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style={
                                        Object {
                                          "verticalAlign": "-0.125em",
                                        }
                                      }
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                        transform=""
                                      />
                                    </svg>
                                  </CaretDownIcon>
                                </span>
                              </button>
                            </Toggle>
                          </div>
                        </DropdownToggle>
                      </div>
                    </DropdownWithContext>
                  </Dropdown>
                </div>
              </div>
            </DataListCell>
          </li>
        </DataListItem>
      </ul>
    </DataList>
  </LoadMore>
</TaskInbox>
`;

exports[`TaskInbox tests Test load data with error 1`] = `
<TaskInbox>
  <ServerErrors
    error={[Error: Network error: bla bla bla bla]}
    variant="large"
  >
    <MockedComponent />
  </ServerErrors>
</TaskInbox>
`;

exports[`TaskInbox tests Test load data without LoadMore 1`] = `
<TaskInbox>
  <DataTable
    LoadingComponent={
      <Bullseye>
        <KogitoSpinner
          spinnerText="Loading user tasks..."
        />
      </Bullseye>
    }
    columns={
      Array [
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Name",
          "path": "referenceName",
        },
        Object {
          "isSortable": false,
          "label": "Process",
          "path": "processId",
        },
        Object {
          "isSortable": true,
          "label": "Priority",
          "path": "priority",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "State",
          "path": "state",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Started",
          "path": "started",
        },
        Object {
          "bodyCellTransformer": [Function],
          "isSortable": true,
          "label": "Last update",
          "path": "lastUpdate",
        },
      ]
    }
    data={
      Array [
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:4000/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
          "excludedUsers": Array [],
          "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
          "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
          "lastUpdate": "2020-02-19T11:11:56.282Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
          "referenceName": "Apply for visa",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T11:11:56.282Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": "",
          "endpoint": "http://localhost:4000/travels/9ae407dd-cdfa-4722-8a49-0a6d2e14550d/VisaApplication/047ec38d-5d57-4330-8c8d-9bd67b53a529",
          "excludedUsers": Array [],
          "id": "047ec38d-5d57-4330-8c8d-9bd67b53a529",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T13:22:40.909Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "9ae407dd-cdfa-4722-8a49-0a6d2e14550d",
          "referenceName": "Confirm travel (Submit fails)",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T10:59:34.185Z",
          "state": "Ready",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-02-19T10:49:24.623Z",
          "description": "",
          "endpoint": "http://localhost:4000/travels/4bfdd404-c46a-4751-b401-b1428a30fa07/ConfirmTravel/f6be5b6b-34de-4b06-b6e7-05bcf8ba7f54",
          "excludedUsers": Array [],
          "id": "f6be5b6b-34de-4b06-b6e7-05bcf8ba7f54",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T10:49:24.623Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "4bfdd404-c46a-4751-b401-b1428a30fa07",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T10:49:16.559Z",
          "state": "Completed",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": "2020-02-19T09:55:52.574Z",
          "description": "",
          "endpoint": "http://localhost:4000/travels/7e31993d-8c9a-45e8-997d-7156632a520f/ConfirmTravel/5cead49f-7649-410a-89ff-840cc52adf52",
          "excludedUsers": Array [],
          "id": "5cead49f-7649-410a-89ff-840cc52adf52",
          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
          "lastUpdate": "2020-02-19T09:55:52.574Z",
          "name": "ConfirmTravel",
          "outputs": "{}",
          "potentialGroups": Array [],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "7e31993d-8c9a-45e8-997d-7156632a520f",
          "referenceName": "Confirm travel",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-02-19T09:55:38.81Z",
          "state": "Aborted",
        },
        Object {
          "actualOwner": null,
          "adminGroups": Array [],
          "adminUsers": Array [],
          "completed": null,
          "description": null,
          "endpoint": "http://localhost:8080/travels/a84df9ba-f41e-47cb-9aa5-67cffff2c5bc/VisaApplication/841b9dba-3d91-4725-9de3-f9f4853b417e",
          "excludedUsers": Array [],
          "id": "841b9dba-3d91-4725-9de3-f9f4853b417e",
          "inputs": "{\\"trip\\":{\\"city\\":\\"New York\\",\\"country\\":\\"US\\",\\"begin\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"end\\":\\"2019-12-14T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"traveller\\":{\\"firstName\\":\\"Jan\\",\\"lastName\\":\\"Kowalski\\",\\"email\\":\\"jan.kowalski@example.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"polna\\",\\"city\\":\\"Krakow\\",\\"zipCode\\":\\"32000\\",\\"country\\":\\"Poland\\"}},\\"GroupId\\":\\"group1\\"}",
          "lastUpdate": "2020-07-30T09:00:02.39Z",
          "name": "VisaApplication",
          "outputs": "{}",
          "potentialGroups": Array [
            "group1",
          ],
          "potentialUsers": Array [],
          "priority": "1",
          "processId": "travels",
          "processInstanceId": "a84df9ba-f41e-47cb-9aa5-67cffff2c5bc",
          "referenceName": "Apply for visa (Submit fail)",
          "rootProcessId": null,
          "rootProcessInstanceId": null,
          "started": "2020-07-30T09:00:02.386Z",
          "state": "Ready",
        },
      ]
    }
    isLoading={false}
    networkStatus={7}
    onSorting={[Function]}
    refetch={[Function]}
  >
    <MockedComponent />
  </DataTable>
</TaskInbox>
`;
